Added front end design for all management menue items. Added management-form aswell as management-tables. Right now still with hard coded contents.

--- a/frontend/src/app/components/category-management/category-management.component.html
+++ b/frontend/src/app/components/category-management/category-management.component.html
@@ -1,1 +1,9 @@
-<p>category-management works!</p>
+<div class="grid-cols-1">
+  <app-mangement-form
+    [visibility]="'invisible'"
+    [menuetype]="'Category'"
+  >
+  </app-mangement-form>
+  <app-management-table>
+  </app-management-table>
+</div>
