--- a/frontend/src/app/components/sensor-management/sensor-management.component.html
+++ b/frontend/src/app/components/sensor-management/sensor-management.component.html
@@ -1,1 +1,12 @@
-<p>sensor-management works!</p>
+<div class="grid-cols-1">
+  <app-mangement-form
+    [visibility]="'invisible'"
+    [menuetype]="'Sensor'"
+    [description]="'IP'"
+  >
+  </app-mangement-form>
+
+  <app-management-table>
+  </app-management-table>
+
+</div>
