HTTP Service added. Dynamic filling of tables depending on the endpoint. Endpoints can be entered in the respective view (.html of the component). Also fixed some .css.

--- a/frontend/src/app/components/category-management/category-management.component.html
+++ b/frontend/src/app/components/category-management/category-management.component.html
@@ -4,6 +4,8 @@
     [menuetype]="'Category'"
   >
   </app-mangement-form>
-  <app-management-table>
+  <app-management-table
+    [endPoint]="'users/cryingshadow/repos'"
+  >
   </app-management-table>
 </div>
