--- a/frontend/src/app/components/mangement-form/mangement-form.component.html
+++ b/frontend/src/app/components/mangement-form/mangement-form.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-5 gap-1 px-10 py-8">
   <div class="m-3">
     <div class="flex justify-center pl-3">
-      <div class="mb-3 xl:w-96 ">
+      <div class="mb-3 w-full ">
         <label
           for="exampleFormControlInput1"
           class="form-label inline-block mb-2 text-gray-700"
@@ -18,7 +18,7 @@
   </div>
   <div class="m-3">
     <div class="flex justify-center pl-3">
-      <div class="mb-3 xl:w-96">
+      <div class="mb-3 w-full">
         <label
           for="exampleFormControlInput1"
           class="form-label inline-block mb-2 text-gray-700"
@@ -37,7 +37,7 @@
   <div class="m-3 {{visibility}}">
     <label
       for="exampleFormControlInput1"
-      class="form-label inline-block mb-2 text-gray-700 "
+      class="form-label inline-block mb-2 text-gray-700"
     >Category</label
     >
 
@@ -75,7 +75,7 @@
 
   <div class="m-3">
     <button
-      class="bg-blue-500 hover:bg-blue-700 text-white font-bold rounded px-20 py-4 mt-8 ml-10"
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold rounded px-10 py-4 mt-8 ml-10 mr-5 w-3/4"
     >
       Add {{menuetype}}
     </button>
