--- a/frontend/src/app/components/plant-managemnet/plant-managemnet.component.html
+++ b/frontend/src/app/components/plant-managemnet/plant-managemnet.component.html
@@ -4,7 +4,8 @@
       [menuetype]="'Plant'"
     >
   </app-mangement-form>
-
-  <app-management-table>
+  <app-management-table
+    [endPoint]="'users/Kitt3120/repos'"
+  >
   </app-management-table>
 </div>
