--- a/frontend/src/app/components/sensor-management/sensor-management.component.html
+++ b/frontend/src/app/components/sensor-management/sensor-management.component.html
@@ -6,7 +6,9 @@
   >
   </app-mangement-form>
 
-  <app-management-table>
+  <app-management-table
+    [endPoint]="'users/flnbrt/repos'"
+  >
   </app-management-table>
 
 </div>
