--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,16 +1,11 @@
 <!-- <h1>Plant 1</h1>
 <app-line-chart [plantName]="'NicePlant'"></app-line-chart> -->
-<h1>Plant 1</h1>
-<div class="grid grid-cols-2 gap-2">
-  <div>
-    <app-line-chart [plantName]="'NicePlant'"></app-line-chart>
+<div *ngFor="let plant of plants" class="m-10 mb-12">
+  <h1>{{ plant.name }}</h1>
+  <div class="h-1/3 w-2/3 inline-block">
+    <app-line-chart [plantName]="plant.name"></app-line-chart>
   </div>
-  <div>
-    <app-line-chart [plantName]="'Plant'"></app-line-chart>
+  <div class="h-1/3 w-1/3 inline-block">
+    <app-pie-chart [plantName]="plant.name"></app-pie-chart>
   </div>
-  <div class="mt-10">
-    <h1>Plant 2</h1>
-    <app-line-chart [plantName]="'NicePlant'"></app-line-chart>
-  </div>
-  <div>02</div>
 </div>
