favicon and settingspage added, openmojy used 🤩

--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -1,1 +1,11 @@
-<p>settings works!</p>
+<div class="m-10">
+  <h1>Settings</h1>
+  <h3>Sources</h3>
+  <span>Emojis from: </span>
+  <a
+    href="https://openmoji.org/"
+    target="”_blank”"
+    class="text-blue-600 underline"
+    >https://openmoji.org/</a
+  >
+</div>
