--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,6 +8,7 @@
           class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
           aria-controls="mobile-menu"
           aria-expanded="false"
+          (click)="onClick()"
         >
           <span class="sr-only">Open main menu</span>
           <!--
@@ -105,7 +106,7 @@
         </div>
       </div>
       <div
-        class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
+        class="absolute inset-y-0 right-10 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
       >
         <button
           type="button"
@@ -122,7 +123,7 @@
         </button>
       </div>
       <div
-        class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
+        class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-right sm:ml-6 sm:pr-0"
       >
         <button
           type="button"
@@ -140,30 +141,40 @@
     </div>
   </div>
   <!-- Mobile menu, show/hide based on menu state. -->
-  <div class="sm:hidden" id="mobile-menu">
+  <div
+    [ngClass]="{
+      'hidden ': isVisible
+    }"
+    class="sm:hidden"
+    id="mobile-menu"
+  >
     <div class="space-y-1 px-2 pt-2 pb-3">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
       <a
         routerLink="/home"
-        class="bg-gray-900 text-white block px-3 py-2 rounded-md text-base font-medium"
+        routerLinkActive="bg-gray-900 text-white"
+        class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
         aria-current="page"
         >Home</a
       >
 
       <a
         routerLink="/plant"
+        routerLinkActive="bg-gray-900 text-white"
         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
         >Plant Management</a
       >
 
       <a
         routerLink="/category"
+        routerLinkActive="bg-gray-900 text-white"
         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
         >Category Management</a
       >
 
       <a
         routerLink="/sensor"
+        routerLinkActive="bg-gray-900 text-white"
         class="text-gray-300 hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium"
         >Sensor Management</a
       >
