--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,7 +1,9 @@
 <!-- <h1>Plant 1</h1>
 <app-line-chart [plantName]="'NicePlant'"></app-line-chart> -->
 <div *ngFor="let plant of plants" class="m-10 mb-12">
-  <h1>{{ plant.name }}</h1>
+  <h1 class="font-medium leading-tight text-5xl mt-0 mb-2 text-blue-600">
+    {{ plant.name }}
+  </h1>
   <div class="h-1/3 w-2/3 inline-block">
     <app-line-chart [plantName]="plant.name"></app-line-chart>
   </div>
