--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -5,9 +5,9 @@
     {{ plant.name }}
   </h1>
   <div class="h-1/3 w-2/3 inline-block">
-    <app-line-chart [plantName]="plant.name"></app-line-chart>
+    <app-line-chart [plantID]="plant.id"></app-line-chart>
   </div>
   <div class="h-1/3 w-1/3 inline-block">
-    <app-pie-chart [plantName]="plant.name"></app-pie-chart>
+    <app-pie-chart [plantID]="plant.id"></app-pie-chart>
   </div>
 </div>
