Plant adding developed

--- a/frontend/src/app/components/plant-management/plant-management.component.html
+++ b/frontend/src/app/components/plant-management/plant-management.component.html
@@ -1,7 +1,93 @@
 <div class="grid-cols-1">
-  <app-mangement-form [visibility]="'visible'" [menuetype]="'Plant'">
-  </app-mangement-form>
-  <table mat-table [dataSource]="data" class="mat-elevation-z8">
+  <div class="grid grid-cols-5 gap-1 px-10 py-8">
+    <div class="m-3">
+      <div class="flex justify-center pl-3">
+        <div class="mb-3 w-full">
+          <label
+            for="exampleFormControlInput1"
+            class="form-label inline-block mb-2 text-gray-700"
+            >Name</label
+          >
+          <input
+            #name
+            type="text"
+            class="form-control block w-full px-3 py-3 mt-1 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+            placeholder="Name"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="m-3">
+      <div class="flex justify-center pl-3">
+        <div class="mb-3 w-full">
+          <label
+            for="exampleFormControlInput1"
+            class="form-label inline-block mb-2 text-gray-700"
+            >Description</label
+          >
+          <input
+            #description
+            type="text"
+            class="form-control block w-full px-3 py-3 mt-1 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+            placeholder="Description"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="m-3">
+      <label
+        for="exampleFormControlInput1"
+        class="form-label inline-block mb-2 text-gray-700"
+        >Category</label
+      >
+
+      <div>
+        <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Selected Category</mat-label>
+          <mat-select #category [formControl]="selectedFW">
+            <mat-option
+              *ngFor="let categorie of categoryNames"
+              [value]="categorie"
+            >
+              {{ categorie }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="m-3">
+      <label
+        for="exampleFormControlInput1"
+        class="form-label inline-block mb-2 text-gray-700"
+        >Sensor</label
+      >
+      <div>
+        <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Selected Sensor</mat-label>
+          <mat-select #sensor [formControl]="selectedFW">
+            <mat-option *ngFor="let sensor of sensorNames" [value]="sensor">
+              {{ sensor }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="m-3">
+      <button
+        type="button"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold rounded px-10 py-4 mt-8 ml-10 mr-5 w-3/4"
+        (click)="
+          savePlant(name.value, description.value, category.value, sensor.value)
+        "
+      >
+        Add Plant
+      </button>
+    </div>
+  </div>
+
+  <table mat-table [dataSource]="plants" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>Id</th>
       <td mat-cell *matCellDef="let element">{{ element.id }}</td>
