--- a/frontend/src/app/components/plant-management/plant-management.component.css
+++ b/frontend/src/app/components/plant-management/plant-management.component.css
@@ -17,3 +17,13 @@
   .mat-column-sensor {
     width: 10% !important;
   }
+  .mat-column-delete {
+    color: red;
+    font-size: larger;
+    width: 10% !important;
+  }
+  .mat-column-delete:hover {
+    color: grey;
+    font-size: larger;
+    width: 10% !important;
+  }
