--- a/frontend/src/app/components/plant-management/plant-management.component.html
+++ b/frontend/src/app/components/plant-management/plant-management.component.html
@@ -90,7 +90,7 @@
   <table mat-table [dataSource]="plants" class="mat-elevation-z8">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      <td #id mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -111,6 +111,13 @@
     <ng-container matColumnDef="sensor">
       <th mat-header-cell *matHeaderCellDef>Sensor</th>
       <td mat-cell *matCellDef="let element">{{ element.sensorId }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-button (click)="deleteItem(element)">Delete</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
