sensor and category deleting and adding developed, submit buttons css styling edited

--- a/frontend/src/app/components/category-management/category-management.component.css
+++ b/frontend/src/app/components/category-management/category-management.component.css
@@ -14,3 +14,13 @@
   .mat-column-minHumidityLevel {
     width: 20% !important;
   }
+  .mat-column-delete {
+    color: red;
+    font-size: larger;
+    width: 10% !important;
+  }
+  .mat-column-delete:hover {
+    color: grey;
+    font-size: larger;
+    width: 10% !important;
+  }
