--- a/frontend/src/app/components/sensor-management/sensor-management.component.css
+++ b/frontend/src/app/components/sensor-management/sensor-management.component.css
@@ -24,3 +24,13 @@
   .mat-column-sleepTimeout {
     width: 10% !important;
   }
+  .mat-column-delete {
+    color: red;
+    font-size: larger;
+    width: 10% !important;
+  }
+  .mat-column-delete:hover {
+    color: grey;
+    font-size: larger;
+    width: 10% !important;
+  }
